--- a/cisnerof/cisnerof.csproj
+++ b/cisnerof/cisnerof.csproj
@@ -92,6 +92,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="RegUtils.cs" />
     <Compile Include="ICleaner.cs" />
     <Compile Include="FileUtils.cs" />
@@ -112,11 +117,11 @@
     <Compile Include="Windows\FileArtifact\RecentFileCacheBcf.cs" />
     <Compile Include="Windows\RegistryArtifacts\AmCache.cs" />
     <Compile Include="Windows\RegistryArtifacts\BAM.cs" />
+    <Compile Include="Windows\RegistryArtifacts\OpenSaveMRU.cs" />
     <Compile Include="Windows\RegistryArtifacts\LastVisitedMRU.cs" />
-    <Compile Include="Windows\RegistryArtifacts\MuiCache.cs" />
     <Compile Include="Windows\RegistryArtifacts\RunMRU.cs" />
     <Compile Include="Windows\RegistryArtifacts\RecentDocs.cs" />
-    <Compile Include="Windows\RegistryArtifacts\OpenSaveMRU.cs" />
+    <Compile Include="Windows\RegistryArtifacts\MuiCache.cs" />
     <Compile Include="Windows\RegistryArtifacts\AppCompatCache.cs" />
     <Compile Include="Windows\RegistryArtifacts\UserAssist.cs" />
     <Compile Include="Windows\RegistryArtifacts\Shellbags.cs" />
@@ -150,6 +155,14 @@
     <Content Include="offreg.x86.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\offreg.x86.dll" />
+    <None Include="Resources\offreg.x64.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets" Condition="Exists('..\packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets')" />
